@@ -1,6 +1,7 @@
 Copyright (c) 2003 Anthony Carrico, Martin Gasbichler
 Copyright (c) 2003 Eric Knauel, Matthias Neubauer
 Copyright (c) 2003 RT Happe
+Copyright (c) 2003 Taylor Campbell
 
 All rights reserved.
 
