@@ -1,6 +1,7 @@
 version 0.3
 * Added DETAILS (autogenerated)
 * Fixed installation
+* New s48 library: banana
 
 version 0.2 - 2003-02-25
 * Added INSTALL, README.admin, README.contrib.
